Added Option Checkbox

--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -4,13 +4,10 @@ html, body {
   margin: 0;
 }
 
-.BlackTriangle {
-  position: absolute;
-  height: 100%;
-  left: 0;
-  top: 0;
-  width: 100%;
-  overflow: hidden;
+.test-container-noinput {
+  color: white;
+  background-color: blue;
+  width: 300px
 }
 
 .BlackTriangle-inner {
