--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -7,7 +7,8 @@ html, body {
 .test-container-noinput {
   color: white;
   background-color: blue;
-  width: 300px
+  width: 300px;
+  height: 300px;
 }
 
 .BlackTriangle-inner {
